managed/apps/aa/components/website/base/deploy-website-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-api
  namespace: aa
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: aa
      component: website
      container: api
  replicas: 1
  template:
    metadata:
      labels:
        app: aa
        component: website
        container: api
    spec:
      containers:
        - name: api
          image: gcr.io/tf-ops-cicd-97aadd/aa/website/main/api:latest
          imagePullPolicy: Always
          ports: 
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          volumeMounts:
            - mountPath: "/etc/secrets/google"
              name: google
              readOnly: true
            - mountPath: "/etc/secrets/sendgrid-key"
              name: sendgrid-key
              readOnly: true
            - mountPath: "/etc/secrets/stripe-key"
              name: stripe-key
              readOnly: true
            - mountPath: "/etc/secrets/mail-key"
              name: mail-key
              readOnly: true
            - mountPath: "/etc/secrets/token"
              name: token
              readOnly: true
      volumes:
        - name: google
          secret:
            secretName: website-api-google
        - name: sendgrid-key
          secret:
            secretName: website-api-sendgrid-key
        - name: stripe-key
          secret:
            secretName: website-api-stripe-key
        - name: mail-key
          secret:
            secretName: website-api-mail-key
        - name: token
          secret:
            secretName: website-api-token
      imagePullSecrets:
        - name: image-pull-secret
