managed/apps/aa/components/website/base/deploy-website-mongo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-mongo
  namespace: aa
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: aa
      component: website
      container: mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: aa
        component: website
        container: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:3.6.23
          imagePullPolicy: Always
          ports: 
            - containerPort: 27017
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          volumeMounts:
            - mountPath: "/etc/secrets/sessions"
              name: sessions
              readOnly: true
      volumes:
        - name: sessions
          secret:
            secretName: website-mongo-sessions
      imagePullSecrets:
        - name: image-pull-secret
