managed/apps/aa/components/website/base/deploy-website-static.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-static
  namespace: aa
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: aa
      component: website
      container: static
  replicas: 1
  template:
    metadata:
      labels:
        app: aa
        component: website
        container: static
    spec:
      containers:
        - name: static
          image: gcr.io/tf-ops-cicd-97aadd/aa/website/main/static:latest
          imagePullPolicy: Always
          ports: 
            - containerPort: 80
          
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
